# How2Pay

./: .gitignore  README.md  example_household.yaml  how2pay_config.yaml  pyproject.toml  run_tests.py
commands/: bills_cmd.py  config_cmd.py  payee_cmd.py  schedule_cmd.py
docs/: README.md  bill_sharing.md  commands.md  configuration.md  features.md
exporters/: __init__.py  csv_exporter.py  html_generator.py  pdf_exporter.py
exporters/html_assets/: README.md  schedule.css
finances/: __init__.py  main.py
helpers/: config_ops.py  formatting.py  payee_colors.py  state_ops.py  validation.py
models/: bill.py  config_model.py  payee.py  recurrence.py  schedule_options.py  state_file.py
scheduler/: cash_flow.py  payment_scheduler.py
tests/: README.md  test_cash_flow.py  test_payment_scheduler.py
tui/: __init__.py  payment_schedule_display.py
