[project]
name = "how2pay"
version = "0.1.0"
description = "A Bill sharing and scheduling tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    'rich',
    'PyYAML',
    'typer'
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
pdf = [
    "weasyprint>=66.0"
]

[project.scripts]
how2pay = "how2pay.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["how2pay*", "commands*", "models*", "helpers*", "scheduler*", "exporters*", "tui*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
